# crystal-picnic

./: .gitignore  CMakeLists.txt  CrystalPicnic32.desktop  CrystalPicnic64.desktop  CrystalPicnicDemo.desktop  CrystalPicnicDemo32.desktop  CrystalPicnicDemo64.desktop  FamilyLicense.txt  FreewareLicense.txt  LICENSE.txt  README.md  ReadMe.txt  amazon_extras.bat  amazon_extras.c  android_extras.bat  android_extras.c  boneed.bat  crystalpicnic.desktop  data_credits.txt  dialogue.txt  install.linux.cpi  install.msys.cpi  installer.nsi  mkdebianbinpackage.sh  mkdebiansrcpackage.sh  music.txt  picursor.diff  poly2tri_msvc.diff  raspberrypi-cmake-cmd.sh  raspberrypi-toolchain.cmake  windows_icon.rc  windows_icon.res
amazon-project/: AmazonSDKTester.apk  AndroidManifest.xml  AndroidManifest.xml.rej  amazon.sdktester.json  build.xml  inst.bat  sign.bat
amazon-project/jni/: Android.mk
amazon-project/res/drawable/: icon
amazon-project/res/drawable-hdpi/: icon
amazon-project/res/drawable-xhdpi/: icon
amazon-project/res/values-v11/: themes.xml
android-4-project/: AndroidManifest.xml
android-4-project/jni/: Application.mk
android-4-project/res/drawable-xhdpi/: logo
android-demo-project/: AndroidManifest.xml
android-demo-project/jni/: Android.mk
android-demo-project/res/values/: strings.xml
android-project/: AndroidManifest.xml  local.properties  sign.bat
android-project/jni/: Android.mk  Application.mk
apple/mac/: Crystal Picnic-Info.plist
crystalpicnic/Crystal Picnic.xcodeproj/: project.pbxproj
crystalpicnic/crystalpicnic/: Crystal Picnic-Info.plist  main.m
crystalpicnic/crystalpicnicTests/: crystalpicnicTests.m
data/: Notice.txt
data/areas/: global.lua
data/areas/antcolony.area/: area  (+3 more)
data/battle/: global.lua
data/music/: abw.mid  abw2.mid  boss.mid  boss_encounter.mid  castle.mid  caverns.mid  final_boss.mid  game_over.mid  heroes.mid  jungle_flea_furrrr.mid  map.mid  old_forest.mid  other.mid  river_town.mid  runner.mid  stonecrater.mid  title.mid  whack_a_skunk.mid
data/scripts/: 5.2.lua  global.lua  map.lua
data/text/: English.utf8  French.utf8  German.utf8
firetv-project/: AndroidManifest.xml  amazon.sdktester.json  sign.bat
firetv-project/jni/: Android.mk  Application.mk
include/: abilities.h  android.h  animation.h  animation_set.h  area_loop.h  area_manager.h  astar.h  astar_character_role.h  audio_config_loop.h  bass_crystalpicnic.h  bass_fileprocs.h  battle_ai.h  battle_entity.h  battle_loop.h  battle_pathfind.h  battle_transition_in.h  bitmap.h  bones.h  camera.h  character_map_entity.h  character_role.h  collidable.h  collision_detection.h  config.h  cpa.h  credits_loop.h  crystal_loop.h  crystalpicnic.h  decimal.h  difficulty_loop.h  direct3d.h  enemy_avatar.h  enemy_avatar_wander_character_role.h  engine.h  entity.h  equipment.h  error.h  follow_character_role.h  frame.h  game_specific_globals.h  (+49 more)
launcher/: CMakeLists.txt  LAUNCHER.fl  b-mac.sh  b-raspberrypi.sh  b.bat  b.sh  icon.rc  icon.res
launcher/LAUNCHER.app/Contents/: Info.plist
launcher/LAUNCHER.app/Contents/Resources/: icon.icns
libs/atlas/: CMakeLists.txt  README.txt
libs/atlas/src/: atlas.cpp  atlas.h  atlas_accessor.cpp  atlas_internal.h  ex_atlas.cpp
libs/tgui2/: CMakeLists.txt  TUTORIAL.txt  example.cpp  example.hpp  tgui2.cpp  tgui2.hpp  tgui2_widgets.cpp  tgui2_widgets.hpp
libs/wrap/: CMakeLists.txt  README.txt
libs/wrap/src/: wrap.cpp  wrap.h
ouya-project/: AndroidManifest.xml
ouya-project/jni/: Android.mk  Application.mk
ouya_noiap-project/: AndroidManifest.xml
ouya_noiap-project/jni/: Android.mk  Application.mk
saves/: after_amaysa.lua  after_old_oak.lua  got_bisou.lua  reached_amaysa1.lua  reached_amaysa2.lua  reached_caverns.lua  reached_endboss.lua  reached_old_forest.save  reached_old_oak.lua  reached_pyou.lua  reached_river_town.lua  reached_stone_crater.lua
src/: Makefile  abilities.cpp  android.cpp  animation.cpp  animation_set.cpp  apple.m  area_loop.cpp  area_manager.cpp  astar.cpp  astar_character_role.cpp  audio_config_loop.cpp  bass.cpp  bass_fileprocs.cpp  battle_ai.cpp  battle_entity.cpp  battle_loop.cpp  battle_pathfind.cpp  battle_transition_in.cpp  bitmap.cpp  bones.cpp  camera.cpp  character_map_entity.cpp  character_role.cpp  collidable.cpp  collision_detection.cpp  config.cpp  cpa.cpp  credits_loop.cpp  crystal_loop.cpp  crystalpicnic.cpp  difficulty_loop.cpp  direct3d.cpp  enemy_avatar.cpp  enemy_avatar_wander_character_role.cpp  engine.cpp  entity.cpp  error.cpp  follow_character_role.cpp  frame.cpp  game_specific_globals.cpp  (+39 more)
tests/: toss.cpp
tools/: 16pixelbottom.cpp  2cpi.cpp  CMakeLists.txt  Makefile  Makefile2  b  battleed.cpp  boneed.cpp  build.sh  chunk_bmp2_a4.cpp  chunk_bmp3_12bit.cpp  chunk_bmp3_16bit.cpp  concat_floating.cpp  countpixels.cpp  cvrt_8_to_4_bit_heightmap.cpp  divide_bmp.cpp  dllist.cpp  dllist.h  draw_poly.cpp  earclip.cpp  flip_bounds_h.sh  glow.cpp  hflip_map.cpp  img2heightmap.cpp  inst.bat  inst.sh  invert_bits.cpp  isocoord.cpp  layout1024.cpp  level_optimizer.cpp  lineed.cpp  mask2bmp.cpp  mask2png.cpp  mk5551.cpp  mk8bitshadow.cpp  mkareazip.sh  mkboxentity.sh  mkcpa-linux.sh  mkcpa.sh  mkheightmap.cpp  (+17 more)
tools/5551_iphone/5551_iphone.xcodeproj/: project.pbxproj
tools/AshEdit2.5/: general.cs  main.cs  mainwin.cs  tilewin.cs  toolwin.cs
tools/battled2/: CMakeLists.txt  FORMAT.txt  README.txt  battled2.cpp  battled2.hpp  widgets.cpp  widgets.hpp
tools/battled2/src/: battled2.cpp  widgets.cpp  widgets.h
tools/flicker/: flicker.cpp
tools/midiplayer/: b  b-msys  b.bat  midiplayer.cpp  sound-bass.cpp  sound-bass.h
tools/midiplayer/midiplayer.app/Contents/: Info.plist
tools/midiplayer/midiplayer.app/Contents/MacOS/: libbass.dylib
tools/midiplayer/midiplayer.app/Contents/Resources/: icon.icns
tools/skeled/: CMakeLists.txt  b  b-linux  b.bat  icon.rc  icon.res  skeled.cpp  skeled.hpp  widgets.cpp  widgets.hpp
tools/translate/: diff.cs  translate.cs
ubuntu/: README.Debian  README.source  changelog  control  copyright  menu  rules
ubuntu/source/: lintian-overrides
(+865 files in other folders)
